# zarr-road-risk

./: .gitignore  CLAUDE.md  NOTES.md  README.md  build_freeway_parquets.ipynb  explore_overture_roads.ipynb  natural-earth-highways-hex.ipynb  overture_motorways.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: TODO.md  h3-res-and-readpath.md  plan-browser-lcr-demo.md  plan-build-parquets.md  plan-hazard-infra-hexes.md
scripts/: build_road_table.py  emit_web_json.py  inspect_gefs_chunks.py  inspect_gefs_zarr.py  preview_motorways.py  verify_join.py  verify_lcr.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: freeways.parquet  hex_pixels.json  hex_pixels.parquet  road_table.parquet
web/src/: App.tsx  main.tsx  map_style.json
web/src/components/: colormap-preview.tsx  control-panel.tsx  deckgl-overlay.tsx  external-link.tsx  field.tsx  help-tooltip.tsx  index.ts  provider.tsx  range-slider.tsx  ui-overlay.tsx
web/src/gefs/: get-tile-data.ts  metadata.ts  render-tile.ts  selection.ts
web/src/gpu/: field.ts  filter-range.ts  sample-texture-2d-array.ts
web/src/lcr/: compute.ts  side-channel.ts
web/src/lib/: deckgl-overlay.tsx
web/src/overlay/: freeways.ts  load-vectors.ts  types.ts
web/src/roads/: road-table.ts
web/src/styles/: theme.ts
web/src/ui/: ControlPanel.tsx  RoadTablePanel.tsx
