[project]
name = "zarr-road-risk"
version = "0.1.0"
description = "Live HRRR road-weather hazard viewer: US freeways scored by Loss-of-Control Risk (LCR), with the ETL that builds the browser app's static data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arraylake>=1.0.1",
    "dask>=2026.3.0",
    "duckdb>=1.5.2",
    "geopandas>=1.1.3",
    "h3>=4.4.2",
    "icechunk>=2.0.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "lonboard>=0.16.0",
    "marimo>=0.23.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "obstore>=0.9.5",
    "overturemaps",
    "palettable>=3.3.3",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pyogrio>=0.12.1",
    "rioxarray>=0.22.0",
    "shapely>=2.1.2",
    "xarray>=2026.4.0",
    "zarr>=3.1.6",
]
